code/examples/parsing/pass/colours-different-cases.gridlock
GRIDLOCK
Players: Amy, Bill.
Grid: 3x3.
Colours: ReD, gReEn.

Amy plays rED at (0,0).
Bill plays RED at (2,0).
Amy plays GreeN at (1,1).
Bill plays rEd at (0,2).
Amy plays REd at (2,2).
Bill cannot move.
Amy wins!