code/examples/parsing/fail/13-invalid-grid-size-non-whole-number.gridlock
GRIDLOCK
Players: Amy, Bill.
Grid: 3.8x3.5.
Colours: red, green.

Amy plays red at (0,0).
Bill plays red at (2,0).
Amy plays green at (1,1).
Bill plays red at (0,2).
Amy plays red at (2,2).
Bill cannot move.
Amy wins!